--- a/src/components/CreateLesson/CreateLesson.module.css
+++ b/src/components/CreateLesson/CreateLesson.module.css
@@ -37,15 +37,13 @@
     .content {
         width: 900px;
     }
-    .createButton {
-
-    }
 }
 
 @media all and (max-width: 992px) {
     .content {
         width: 80%;
     }
+
     .createButton {
         font-size: 20px;
     }
@@ -55,6 +53,7 @@
     .content {
         width: 90%;
     }
+
     .createButton {
         font-size: 15px;
         padding: 15px 50px;
@@ -62,11 +61,16 @@
 }
 
 @media all and (max-width: 520px) {
-    .content {
-        width: 90%;
-    }
     .createButton {
         font-size: 15px;
         padding: 10px 40px;
+    }
+}
+
+@media all and (max-width: 480px) {
+    .buttonsBlock {
+        margin: 0;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
