--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -66,22 +66,18 @@
 }
 
 .dropDown:hover .navLink {
-    color: #F56464 !important;
-    width: 210px;
-}
-
-.dropDownActiveLink {
-    color: #F56464 !important;
+    color: black !important;
+    width: 251px;
 }
 
 .dropDownMenu {
     position: absolute;
     top: 69px;
-    width: 210px;
     background-color: white;
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
     text-align: center;
+    width: max-content;
 }
 
 .dropDownMenu .dropDownItem {
@@ -94,6 +90,7 @@
     font-weight: bold;
     font-size: 1.2em;
     transition: all .15s;
+    width: 251px;
 }
 
 .dropDownMenu .dropDownItem:hover {
