--- a/src/components/Favorite/HeaderWithToggle/Toggle/Toggle.module.css
+++ b/src/components/Favorite/HeaderWithToggle/Toggle/Toggle.module.css
@@ -4,7 +4,7 @@
     font-size: 38px;
     line-height: 54px;
     color: white;
-    text-decoration: underline #F56464;
+    /*text-decoration: underline #F56464;*/
     cursor: pointer;
     padding: 0 20px 5px;
     border-radius: 10px;
