--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     width: fit-content;
-    margin: 0 10px 5px auto;
+    margin: 15px 0 0 auto;
     color: white;
     font-size: 18px;
 }
@@ -61,7 +61,7 @@ a.creatorName:hover {
     padding: 40px 70px;
     background-color: white;
     border-radius: 9px;
-    margin: 0 auto;
+    margin: 0 auto 15px;
 }
 
 .buttonsBlock {
