--- a/src/index.css
+++ b/src/index.css
@@ -55,11 +55,31 @@ h1.pageTitle {
     background-color: #FBCB84;
 }
 
+
+@media all and (max-width: 1220px) {
+    .content {
+        width: 900px;
+    }
+}
+
+@media all and (max-width: 920px) {
+    .content {
+        width: 700px;
+    }
+}
+
 @media all and (max-width: 768px) {
     .btn {
         width: 200px;
         min-height: 60px;
         font-size: 18px;
+    }
+}
+
+@media all and (max-width: 720px) {
+    .content {
+        width: 95%;
+        margin: 40px auto 0;
     }
 }
 
