--- a/src/components/Favorite/HeaderWithToggle/HeaderWithToggle.module.css
+++ b/src/components/Favorite/HeaderWithToggle/HeaderWithToggle.module.css
@@ -9,3 +9,14 @@
     gap: 15px;
     position: absolute;
 }
+
+
+@media all and (max-width: 480px) {
+    .titleBlock {
+        flex-wrap: wrap;
+        gap: 0;
+    }
+    .wrapper {
+        margin-bottom: 10px;
+    }
+}
