--- a/src/components/Favorite/HeaderWithToggle/Toggle/Toggle.module.css
+++ b/src/components/Favorite/HeaderWithToggle/Toggle/Toggle.module.css
@@ -11,7 +11,7 @@
     transition: all 500ms;
     left: 250px;
     z-index: 1;
-    min-width: 320px;
+    min-width: 304px;
 }
 
 .select:hover {
@@ -29,4 +29,15 @@
 
 .select:hover .arrow {
     transform: rotate(180deg);
+}
+
+@media all and (max-width: 480px) {
+    .select {
+        font-size: 30px;
+        padding: 0 0;
+    }
+    .select:hover {
+        padding: 0 10px;
+        background-color: #C4C4C4;
+    }
 }
