--- a/src/components/MainPage/AboutBlock/AboutBlock.module.css
+++ b/src/components/MainPage/AboutBlock/AboutBlock.module.css
@@ -2,14 +2,14 @@
     background-image: url("../../../assets/img/mainPage/bg-line.svg");
     background-repeat: no-repeat;
     background-position: bottom;
-    padding-bottom: 300px;
+    padding-bottom: 100px;
 }
 
 
 .wrapper {
     width: 1200px;
     margin: 0 auto;
-    padding: 40px 0 80px;
+    padding: 70px 0 80px;
 }
 
 .title {
@@ -18,7 +18,7 @@
     line-height: 41px;
     color: #F56464;
     text-transform: uppercase;
-    margin-bottom: 35px;
+    margin-bottom: 70px;
 }
 
 .text {
@@ -48,11 +48,25 @@
     }
 }
 
+@media all and (max-width: 768px) {
+    .wrapper {
+        padding: 50px 0 60px;;
+    }
+
+    .title {
+        margin-bottom: 50px;
+    }
+}
+
 @media all and (max-width: 500px) {
+    .wrapper {
+        padding: 30px 0 40px;
+    }
+
     .title {
         font-size: 15px;
         line-height: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     .text {
