--- a/src/components/MainPage/DescriptionBanner/DescriptionBanner.module.css
+++ b/src/components/MainPage/DescriptionBanner/DescriptionBanner.module.css
@@ -1,7 +1,6 @@
 .descriptionBanner {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.41);
-    margin: 10px 0 110px 0;
 }
 
 .descriptionWrapper {
@@ -96,9 +95,20 @@
     color: black;
 }
 
+@media all and (min-width: 1024px) and (max-width: 2024px) {
+    .descriptionBanner {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 90vh;
+        background-color: rgba(0, 0, 0, 0.41);
+        margin: 10px 0 0 0;
+    }
+}
+
 @media all and (max-width: 1024px) {
     .descriptionBanner {
-        margin: 0 0 50px 0;
+        /*margin: 0 0 50px 0;*/
     }
 
     .descriptionWrapper {
