--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,5 +1,6 @@
 .main {
     background-color: #E0EFDF;
+    padding: 0;
 }
 
 .audienceAndQuestions {
@@ -7,5 +8,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding: 200px 0 100px;
-    margin-top: -100px;
+    margin-top: -30px;
+}
+
+@media all and (max-width: 768px) {
+    .audienceAndQuestions {
+        padding: 180px 0 60px;
+    }
+}
+
+
+@media all and (max-width: 500px) {
+    .audienceAndQuestions {
+        padding: 150px 0 2px;
+    }
 }
