--- a/src/components/MainPage/TargetAudienceBlock/TargetAudienceBlock.module.css
+++ b/src/components/MainPage/TargetAudienceBlock/TargetAudienceBlock.module.css
@@ -25,9 +25,25 @@
         width: auto;
         padding: 0 50px;
     }
+
+    .title {
+        text-align: center;
+    }
 }
+
+@media all and (max-width: 768px) {
+    .title {
+        margin-bottom: 60px;
+    }
+}
+
 @media all and (max-width: 500px) {
     .targetBlock {
         padding: 0 20px;
+    }
+
+    .title {
+        font-size: 15px;
+        line-height: 20px;
     }
 }
