--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,15 @@ h1.pageTitle {
     width: fit-content;
 }
 
+h3 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 54px;
+    color: white;
+    width: fit-content;
+}
+
 .btn {
     font-weight: 700;
     font-size: 20px;
@@ -55,6 +64,9 @@ h1.pageTitle {
     background-color: #FBCB84;
 }
 
+.hide {
+    display: none;
+}
 
 @media all and (max-width: 1220px) {
     .content {
