Загрузка обложки - урок и фрагмент

--- a/src/components/Lesson/LessonPreview/LessonPreview.module.css
+++ b/src/components/Lesson/LessonPreview/LessonPreview.module.css
@@ -3,11 +3,10 @@
 }
 
 .lessonImage {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
     width: 100%;
     height: 350px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .annotationTitle {
