--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -23,6 +23,13 @@
     margin-bottom: 15px;
 }
 
+.previewImg {
+    width: 315px;
+    height: 150px;
+    object-fit: cover;
+    object-position: center;
+}
+
 .addToFavoriteButton {
     position: absolute;
     top: 5px;
