--- a/src/components/Lesson/Fragment/Fragment.module.css
+++ b/src/components/Lesson/Fragment/Fragment.module.css
@@ -28,6 +28,15 @@
     max-height: 80vh;
 }
 
+.image {
+    margin: 0 auto 15px;
+    width: fit-content;
+}
+
+.image img {
+    max-height: 80vh;
+}
+
 .author {
     display: flex;
     align-items: center;
