--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,26 @@ h3 {
     background-color: #FBCB84;
 }
 
+.uploadBtn {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding: 8px;
+    width: 280px;
+    background-color: #FBCB84;
+    border-radius: 20px;
+    border: none;
+    color: black;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.uploadBtn:hover {
+    outline: none;
+    background-color: #F18A93;
+    box-shadow: 0 0 5px rgba(78, 78, 78, 0.5);
+}
+
 .hide {
     display: none;
 }
