Аннотация к изображению, 403 ошибка, лайк на фрагмент в уроке

--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -67,10 +67,16 @@ a.creatorName:hover {
 .image {
     margin: 0 auto 15px;
     width: fit-content;
+    max-width: 100%;
 }
 
 .image img {
     max-height: 80vh;
+    width: 100%;
+}
+
+.annotation {
+
 }
 
 .editBlock {
