--- a/src/components/BlockedPage/BlockedPage.module.css
+++ b/src/components/BlockedPage/BlockedPage.module.css
@@ -3,4 +3,28 @@
     border-radius: 10px;
     margin: 0 auto;
     padding: 50px;
+    text-align: center;
+}
+
+.header {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 64px;
+    line-height: 87px;
+    color: #000000;
+}
+
+.text, .sadSmile {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 49px;
+    color: #EF5B5B;
+}
+
+.sadSmile {
+    display: block;
+    transform: rotate(90deg);
+    width: fit-content;
+    margin: 0 auto;
 }
