--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ h3 {
     height: 35px;
     background-color: transparent;
     border: none;
-    transition: 500ms;
+    transition: transform 500ms;
     margin: 0 7.5px 0;
 }
 
