--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,13 @@ h3 {
     transform: scale(1.2);
 }
 
+.avatar {
+    border-radius: 50%;
+    box-sizing: border-box;
+    object-fit: cover;
+    object-position: center;
+}
+
 @media all and (max-width: 1220px) {
     .content {
         width: 900px;
