Кнопки в баннере неавторизованного пользователя

--- a/src/components/MainPage/DescriptionBanner/DescriptionBanner.module.css
+++ b/src/components/MainPage/DescriptionBanner/DescriptionBanner.module.css
@@ -157,11 +157,13 @@
 
     .buttonsBlock {
         margin-top: 10px;
+        flex-wrap: wrap;
     }
 
     .btn {
         font-size: 18px;
         line-height: 25px;
+        margin: 5px 0;
     }
 
     .btn.login {
