отступ тегов при редактировании фрагмента

--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -62,6 +62,10 @@ a.creatorName:hover {
     margin: 0 auto 15px;
 }
 
+.editBlock {
+    margin: 0 auto 15px;
+}
+
 .image {
     margin: 0 auto 15px;
     width: fit-content;
