--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -31,6 +31,11 @@
     object-position: center;
 }
 
+.deleteFragmentButton {
+    background-image: url("./../../../../assets/img/fragments/plus.svg");
+    -webkit-transform: rotate(45deg);
+}
+
 .addToFavoriteButton {
     position: absolute;
     top: 5px;
@@ -50,7 +55,7 @@
     background-image: url("../../../../assets/img/fragments/addToFavorite.svg");
 }
 
-.addToFavorite:hover {
+.addToFavorite:hover, .deleteFragmentButton:hover {
     box-shadow: 0 0 13px 0 rgba(250, 234, 237, 0.84);
 }
 .alreadyFavorite:hover {
