--- a/src/components/Lesson/Lesson.module.css
+++ b/src/components/Lesson/Lesson.module.css
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 20px;
+    margin: 20px 0 10px;
 }
 
 .addToFavorite {
