--- a/src/style/index.css
+++ b/src/style/index.css
@@ -140,6 +140,26 @@ h3 {
     margin-top: 5px;
 }
 
+.backButton {
+    background-image: url("../assets/img/backArrow.svg");
+    background-size: cover;
+    background-position: center center;
+    height: 35px;
+    width: 25px;
+    background-color: transparent;
+    border: none;
+    transition: 500ms;
+}
+
+.backButton:hover {
+    transform: translateX(-10px);
+    padding-right: 10px;
+}
+
+.backButton:focus {
+    outline: none;
+}
+
 @media all and (max-width: 1220px) {
     .content {
         width: 900px;
