--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -20,6 +20,7 @@
     border: none;
     font-size: 30px;
     margin: 60px 0;
+    color: white;
 }
 
 .author {
@@ -67,6 +68,7 @@ a.creatorName:hover {
 }
 
 .image {
+    display: block;
     margin: 0 auto 15px;
     width: fit-content;
     max-width: 100%;
