--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -11,16 +11,10 @@
 }
 
 .fragmentTitle {
-    display: block;
-    background: rgba(255, 255, 255, 0.69);
-    border-radius: 10px;
-    padding: 5px 10px;
-    box-sizing: border-box;
     width: 100%;
-    border: none;
-    font-size: 30px;
-    margin: 60px 0;
-    color: white;
+    font-size: 40px;
+    margin: 0 0 60px 0;
+    font-weight: bold;
 }
 
 .author {
