--- a/src/components/MyFragments/SearchBlock/SearchBlock.module.css
+++ b/src/components/MyFragments/SearchBlock/SearchBlock.module.css
@@ -1,5 +1,5 @@
 .searchBlock {
-    margin-bottom: 40px;
+    margin-bottom: 15px;
 }
 
 .title {
@@ -58,6 +58,12 @@
     color: white;
     width: 322px;
     margin-right: 35px;
+}
+
+.allTags {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .searchButton {
