--- a/src/components/Fragment/DeleteErrorModal/DeleteErrorModal.module.css
+++ b/src/components/Fragment/DeleteErrorModal/DeleteErrorModal.module.css
@@ -1,4 +1,7 @@
 .overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     top: 0;
     left: 0;
@@ -10,6 +13,72 @@
     transition: 2s;
 }
 
+.overlay .content {
+    transform: none !important;
+    margin: 0 !important;
+    inset: initial !important;
+
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
+    position: relative;
+    max-height: 70vh;
+}
+
 .overlay h3 {
     color: black;
+    margin-right: 50px;
+    line-height: 40px;
+}
+
+.overlay h4 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 27px;
+}
+
+.lessons {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.lesson {
+    display: block;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 27px;
+    color: black;
+    border-bottom: 1px solid #C4C4C4;
+    padding: 5px 10px;
+}
+
+.lesson:hover {
+    color: black;
+    text-decoration: underline;
+    background-color: #FBCB84;
+}
+
+.closeButton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: block;
+    width: 35px;
+    height: 35px;
+    background-color: transparent;
+    background-image: url("../../../assets/img/fragments/plus.svg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    transform: rotate(45deg);
+    transition: 300ms;
+    outline: none;
+    border: none;
+}
+
+.closeButton:hover {
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
 }
