--- a/src/style/index.css
+++ b/src/style/index.css
@@ -109,11 +109,11 @@ h3 {
 }
 
 .backButton {
-    background-image: url("../assets/img/backArrow.svg");
+    background-image: url("../assets/img/common/back.svg");
     background-size: cover;
     background-position: center center;
-    height: 35px;
-    width: 25px;
+    height: 30px;
+    width: 45px;
     background-color: transparent;
     border: none;
     transition: 500ms;
