--- a/src/components/CreateFragment/TagsList/TagsList.module.css
+++ b/src/components/CreateFragment/TagsList/TagsList.module.css
@@ -32,8 +32,8 @@
     max-width: 300px;
     min-width: 300px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    position: relative;
-    top: 0;
-    margin-bottom: -450px;
+    /*position: relative;*/
+    /*top: 0;*/
+    /*margin-bottom: -450px;*/
     z-index: 10;
 }
