React.Suspense and navbar

--- a/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
@@ -108,7 +108,7 @@
     display: flex;
     align-items: center;
     padding: 15px 60px;
-    background-color: #BFC3C5;
+    background-color: #e2e2e2;
     margin-top: 50px;
 }
 
