--- a/src/components/CreateLesson/СonstructorBlock/СonstructorBlock.module.css
+++ b/src/components/CreateLesson/СonstructorBlock/СonstructorBlock.module.css
@@ -67,3 +67,28 @@
     display: flex;
     align-items: center;
 }
+
+@media all and (max-width: 768px) {
+    .fragmentsList {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .lastCard {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .button {
+        position: static;
+        margin: 0;
+    }
+
+    .addButtonWithoutCard {
+        display: block;
+        margin: 0 auto;
+        justify-self: center;
+    }
+}
