--- a/src/components/Lesson/Lesson.module.css
+++ b/src/components/Lesson/Lesson.module.css
@@ -20,6 +20,7 @@
     justify-content: space-between;
     align-items: flex-start;
     margin: 20px 0 10px;
+    gap: 15px;
 }
 
 .addToFavorite {
