--- a/src/components/Games/Pairs/Pairs.module.css
+++ b/src/components/Games/Pairs/Pairs.module.css
@@ -35,13 +35,7 @@
 }
 
 .finished {
-    background-color: rgba(0, 255, 0, 0.6);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+    cursor: default;
 }
 
 .card .cardImage {
@@ -57,4 +51,33 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
+}
+
+.endGameOverlay {
+    inset: 0;
+    position: fixed;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.endGameModal {
+    background-color: white;
+    border-radius: 10px;
+    min-width: 750px;
+    min-height: 310px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modalInner {
+    width: fit-content;
+}
+
+.modalHeader {
+    color: black;
+    text-align: center;
+    margin-bottom: 75px;
 }
