--- a/src/components/Games/Pairs/Pairs.module.css
+++ b/src/components/Games/Pairs/Pairs.module.css
@@ -1,6 +1,5 @@
 .cards {
     display: grid;
-    grid-template-columns: repeat(5, 200px);
     gap: 20px;
     justify-content: center;
 }
@@ -19,6 +18,7 @@
     cursor: pointer;
     box-sizing: border-box;
     position: relative;
+    align-self: center;
 }
 
 .card:hover {
@@ -26,23 +26,24 @@
     transform: scale(1.1);
 }
 
-.rotated {
+.card.rotated {
     transform: rotateY(180deg);
 }
 
-.rotated:hover {
+.card.rotated:hover {
     transform: rotateY(180deg) scale(1.1);
 }
 
-.finished {
+.card.finished {
     cursor: default;
 }
 
 .card .cardImage {
+    position: absolute;
     display: block;
     object-fit: cover;
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     border-radius: 10px;
     backface-visibility: hidden;
 }
@@ -68,16 +69,31 @@
     min-width: 750px;
     min-height: 310px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding: 40px;
 }
 
 .modalInner {
     width: fit-content;
+    display: grid;
+    grid-auto-rows: 70px 1fr 70px;
+}
+
+.timeBlock {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.timeBlock span {
+    text-align: center;
+}
+
+.timeBlock .time {
+    font-weight: bold;
 }
 
 .modalHeader {
     color: black;
     text-align: center;
-    margin-bottom: 75px;
 }
