feat(game_associations): Добавлена игра ассоциации

--- a/src/components/Games/GameCard/Card.module.css
+++ b/src/components/Games/GameCard/Card.module.css
@@ -2,7 +2,7 @@
     /*width: 200px;*/
     /*height: 200px;*/
     border-radius: 10px;
-    transition: all ease 500ms;
+    transition: transform ease 500ms;
     transform-style: preserve-3d;
     border: 2px solid rgba(243, 106, 118, 0.7);
     background: linear-gradient(214.96deg, #F3706A 5.41%, #FDD8BC 57.9%);
@@ -31,6 +31,12 @@
 .card.finished {
     cursor: default;
 }
+.card.absoluteCard {
+    position: absolute;
+    top: 30%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
 
 .card .cardImage {
     position: absolute;
@@ -40,4 +46,5 @@
     height: 100%;
     border-radius: 10px;
     backface-visibility: hidden;
+    pointer-events: none;
 }
