--- a/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
+++ b/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
@@ -48,6 +48,19 @@
     margin-left: 50px;
 }
 
+.titleGame {
+    grid-area: title;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33px;
+    color: #000000;
+    border-bottom: 2px solid #7FB1DC;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-left: 50px;
+}
+
 .annotation {
     grid-area: annotation;
     font-family: Montserrat, sans-serif;
@@ -127,6 +140,14 @@
 
 .author {
     background: rgba(239, 91, 91, 0.9);
+    border-radius: 0 0 10px 10px;
+    color: white;
+    padding: 8px 80px;
+    text-align: end;
+}
+
+.authorGame {
+    background: #7FB1DC;
     border-radius: 0 0 10px 10px;
     color: white;
     padding: 8px 80px;
