--- a/src/components/CreateGame/Pairs/PairsCreate.module.css
+++ b/src/components/CreateGame/Pairs/PairsCreate.module.css
@@ -6,7 +6,7 @@
 }
 
 .plus {
-    background-image: url("./../../assets/img/fragments/plus.svg");
+    background-image: url("./../../../assets/img/fragments/plus.svg");
     width: 50px;
     height: 50px;
     background-position: center;
