--- a/src/components/CreateGame/Puzzles/PuzzlesCreate.module.css
+++ b/src/components/CreateGame/Puzzles/PuzzlesCreate.module.css
@@ -10,10 +10,27 @@
     gap: 40px;
 }
 
+.selectBlockWrapperEdit {
+    margin-bottom: 30px;
+}
+
 .selectBlock {
     display: flex;
     gap: 10px;
     align-items: center;
+}
+
+.previewBlock {
+    display: flex;
+    width: 100%;
+    justify-items: center;
+}
+
+.preview {
+    height: 350px;
+    margin: 0 auto;
+    border: 5px solid #FBE184;
+    box-sizing: content-box;
 }
 
 .plus {
@@ -47,51 +64,4 @@
 .uploadBtn:hover {
     background-color: #FBCB84;
     cursor: pointer;
-}
-
-.image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.delete {
-    display: flex;
-    cursor: pointer;
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    top: 0;
-    left: 0;
-    color: white;
-    font-weight: bold;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(229, 84, 84, 0.9);
-    transition-duration: 0.3s;
-    opacity: 0;
-}
-
-.delete:hover {
-    opacity: 1;
-}
-
-.preview {
-    height: 350px;
-    margin: 0 auto;
-    border: 5px solid #FBE184;
-    box-sizing: content-box;
-}
-
-.previewBlock {
-    display: flex;
-    width: 100%;
-    justify-items: center;
-}
-
-.placeholder {
-    text-align: center;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
 }
