--- a/src/components/Games/Puzzle/Puzzle.module.css
+++ b/src/components/Games/Puzzle/Puzzle.module.css
@@ -28,11 +28,14 @@
     background-color: white;
     border-radius: 10px;
     padding: 20px;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .preview {
     display: block;
-    width: 100%;
+    width: 70%;
+    margin: 0 auto;
     border-radius: 10px;
 }
 
