feat(catalog): Возрастной ценз на карточках фрагментов и уроков

--- a/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
+++ b/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
@@ -14,9 +14,9 @@
     padding: 30px 25px 0;
     display: grid;
     grid-template-areas: "preview title title heart"
-                         "preview annotation annotation heart"
-                         "preview count button heart"
-                         "tags count button heart";
+                         "preview annotation annotation ageLimit"
+                         "preview count button ageLimit"
+                         "tags count button ageLimit";
     grid-template-columns: 325px 1fr 1fr 50px;
     grid-template-rows: auto 1fr auto auto;
     margin-bottom: 15px;
@@ -114,6 +114,22 @@
     margin-left: 3px;
 }
 
+.ageLimitWrapper {
+    grid-area: ageLimit;
+}
+
+.ageLimit {
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 50%;
+    padding: 7px 7px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+}
+
 .addToFavorite {
     background-repeat: no-repeat;
     background-position: center center;
@@ -181,7 +197,8 @@
                          "title"
                          "annotation"
                          "count"
-                         "tags";
+                         "tags"
+                         ;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr auto auto auto;
         margin-bottom: 15px;
@@ -199,6 +216,12 @@
         margin-left: 0;
         top: 35px;
         right: 22px;
+    }
+
+    .ageLimitWrapper {
+        position: absolute;
+        top: 38px;
+        left: 28px;
     }
 
     .lessonButton {
