--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -31,6 +31,19 @@
     object-position: center;
 }
 
+.ageLimit {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: white;
+    border-radius: 50%;
+    padding: 2px 7px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+}
+
 .deleteFragmentButton {
     background-image: url("./../../../../assets/img/fragments/plus.svg");
     -webkit-transform: rotate(45deg);
