--- a/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
+++ b/src/components/CatalogPage/lessonsCatalog/LessonsList/LessonCard/LessonCard.module.css
@@ -111,19 +111,24 @@
 
 .favorite {
     grid-area: heart;
-    margin-left: 3px;
+    display: flex;
+    justify-content: center;
 }
 
 .ageLimitWrapper {
     grid-area: ageLimit;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
 }
 
 .ageLimit {
-    color: black;
-    border: 1px solid black;
-    background-color: white;
+    text-align: center;
+    color: white;
+    /*border: 1px solid black;*/
+    background-color: rgba(239, 91, 91, 0.9);
     border-radius: 50%;
-    padding: 7px 7px;
+    padding: 3px 8px;
     font-family: 'Bebas Neue', sans-serif;
     font-style: normal;
     font-weight: 400;
