--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -36,6 +36,8 @@
     top: 5px;
     left: 5px;
     background-color: white;
+    color: black;
+    border: 1px solid black;
     border-radius: 50%;
     padding: 2px 7px;
     font-family: 'Bebas Neue', sans-serif;
