--- a/src/components/Lesson/Navigation/Navigation.module.css
+++ b/src/components/Lesson/Navigation/Navigation.module.css
@@ -11,6 +11,7 @@
 
 .btn {
     width: 61px;
+    height: 61px;
     background-position: center;
     border: none;
     background-color: transparent;
