--- a/src/components/Games/EndGameModal/EndGameModal.module.css
+++ b/src/components/Games/EndGameModal/EndGameModal.module.css
@@ -17,6 +17,7 @@
     justify-content: center;
     padding: 40px;
     border: 2px solid rgba(243, 106, 118, 0.7);
+    outline: none;
 }
 
 .modalInner {
