feat(graphic_dictation): Добавлена игра "Графический диктант"

--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -77,10 +77,10 @@ a.creatorName:hover {
 
 }
 
-.editBlock {
-    margin-bottom: 15px;
-    background-color: white;
-}
+/*.editBlock {*/
+/*    margin-bottom: 15px;*/
+/*    background-color: white;*/
+/*}*/
 
 .buttonsBlock {
     display: flex;
