--- a/src/components/Games/GraphDictation/GraphDictation.module.css
+++ b/src/components/Games/GraphDictation/GraphDictation.module.css
@@ -10,6 +10,9 @@
     background-color: white;
     margin: 0 auto;
     width: fit-content;
+    gap: 20px;
+    grid-template-columns: 1fr 200px;
+    justify-content: space-between;
 }
 
 .point {
